--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-scroll": "^1.8.3",
     "autoprefixer": "^9",
     "axios": "^0.27.2",
+    "json-server": "^0.17.0",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
