--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "jest",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
