--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^28.1.3",
+    "@types/jest": "^27.5.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
@@ -19,7 +19,7 @@
     "@types/react-scroll": "^1.8.3",
     "autoprefixer": "^9",
     "axios": "^0.27.2",
-    "jest": "^28.1.1",
+    "json-server": "^0.17.0",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -30,14 +30,13 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "jest",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
